--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-    <meta charset="utf-8">
-    <title>Personal Website of Muttaqi Ahmad Alladin</title>
-  </head>
-  <body>
-      <p>please work</p>
-      <h3>please work </h3>
-  </body>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
